      package
    - 07-nouveau-update.diff and
      09-intel-fix-invalidate-before-initialisation.diff dropped, they were
      backports from upstream
    - 04_osmesa_version.diff updated
  * Add build-dep on talloc.
  * Drop the mesa-utils package, demos were moved out of the mesa tree.
  * Use --with-egl-platforms instead of --with-egl-displays, and replace kms
    with drm.

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Fri, 30 Jul 2010 19:08:57 +1000

mesa (7.8.2-2) experimental; urgency=low

  * Add missing dependencies to libegl1-mesa-dev, thanks to Alexandros
    Frantzis (LP: #600243).
  * gallium: handle kfreebsd like freebsd, fixing FTBFS (closes: #585618)
  * intel: Fix invalidate before initialisation (stolen from fdo bugzilla
    #29091, fixes server 1.9rc crash when starting an app using GLX 1.3)
  * Pull from 7.8-branch up to commit d06e011.
  * Fixup hurd and kfreebsd patches to apply.

 -- Julien Cristau <jcristau@debian.org>  Tue, 20 Jul 2010 15:57:31 +0200

mesa (7.8.2-1) experimental; urgency=low

  [ Robert Hooker ]
  * Adjust the build system to install the dri target in a separate
    DESTDIR, no longer passing --libdir=/usr/lib/glx at configure time
    messing with the .pc's since it is used for a majority of the 
    packages now.
  * Fix up the mesa-common-dev header install location.

  [ Julien Cristau ]
  * Add ${misc:Depends} to all packages.
  * libc6-dev is build-essential, no need to depend on it.
  * Replace nonsensical dependency of libglw1-mesa-dev on libxext6 with a
    dependency on libxt-dev and lesstif2-dev.
  * Add new lintian overrides for the package-name-doesnt-match-sonames stuff.
  * Don't ship progs/objviewer in the tarball, it's insanely big and unused.
  * New upstream release.
  * Refresh patches.
  * Stop shipping an upstream git log, it's unlikely to be useful to anyone,
    and it's big.
  * debian/scripts/choose-configs: use DEB_HOST_ARCH, not DEB_BUILD_ARCH
    (closes: #451648).