@@ -1,12 +1,0 @@
-prefix=/usr
-exec_prefix=${prefix}
-libdir=/usr/lib
-includedir=/usr/include
-
-Name: glesv1_cm
-Description: Mesa OpenGL ES 1.1 CM library
-Requires.private: 
-Version: 7.8.1
-Libs: -L${libdir} -lGLESv1_CM
-Libs.private: -lm -lpthread -ldl
-Cflags: -I${includedir} 
