@@ -1,12 +1,0 @@
-prefix=/usr
-exec_prefix=${prefix}
-libdir=/usr/lib
-includedir=/usr/include
-
-Name: glesv2
-Description: Mesa OpenGL ES 2.0 library
-Requires.private: 
-Version: 7.8.1
-Libs: -L${libdir} -lGLESv2
-Libs.private: -lm -lpthread -ldl
-Cflags: -I${includedir} 
