@@ -1,4 +1,4 @@
 dri/usr/lib/libEGL.so usr/lib
 dri/usr/include/EGL usr/include
 dri/usr/include/KHR usr/include
-debian/egl.pc usr/lib/pkgconfig
+dri/usr/lib/pkgconfig/egl.pc usr/lib/pkgconfig
