@@ -1,1 +1,0 @@
-dri/usr/lib/egl/egl_kms_*.so usr/lib/egl
