@@ -1,1 +1,0 @@
-dri/usr/lib/egl/egl_x11_*.so usr/lib/egl
