@@ -1,58 +1,39 @@
 libEGL.so.1 libegl1-mesa #MINVER# | libegl1-x11
- _eglAddConfig@Base 7.8.1
- _eglAddNewMode@Base 7.8.1
- _eglAddScreen@Base 7.8.1
- _eglBindContext@Base 7.8.1
- _eglCheckResource@Base 7.8.1
- _eglCleanupDisplay@Base 7.8.1
- _eglCompareConfigs@Base 7.8.1
- _eglConfigFromContextModesRec@Base 7.8.1
- _eglConfigToContextModesRec@Base 7.8.1
- _eglDestroyScreen@Base 7.8.1
- _eglError@Base 7.8.1
- _eglGetAPIContext@Base 7.8.1
- _eglGetCurrentContext@Base 7.8.1
- _eglGetCurrentThread@Base 7.8.1
- _eglGetProbeCache@Base 7.8.1
- _eglInitConfig@Base 7.8.1
- _eglInitContext@Base 7.8.1
- _eglInitDriverFallbacks@Base 7.8.1
- _eglInitImage@Base 7.8.1
- _eglInitScreen@Base 7.8.1
- _eglInitSurface@Base 7.8.1
- _eglLog@Base 7.8.1
- _eglMatchConfig@Base 7.8.1
- _eglParseConfigAttribList@Base 7.8.1
- _eglReleaseDisplayResources@Base 7.8.1
- _eglSetLogLevel@Base 7.8.1
- _eglSetLogProc@Base 7.8.1
- _eglSetProbeCache@Base 7.8.1
- _eglSortConfigs@Base 7.8.1
- _eglValidateConfig@Base 7.8.1
+ # These are all internal symbols between libEGL and the
+ # drivers.  Handle the dependency explicitly in the driver
+ # package.
+ (regex)"^_egl.*@Base$" 7.8.1
  eglBindAPI@Base 7.8.1
  eglBindTexImage@Base 7.8.1
  eglChooseConfig@Base 7.8.1
  eglChooseModeMESA@Base 7.8.1
+ eglClientWaitSyncKHR@Base 7.9
  eglCopyBuffers@Base 7.8.1
  eglCopyContextMESA@Base 7.8.1
  eglCreateContext@Base 7.8.1
+ eglCreateDRMImageMESA@Base 7.9
  eglCreateImageKHR@Base 7.8.1
  eglCreatePbufferFromClientBuffer@Base 7.8.1
  eglCreatePbufferSurface@Base 7.8.1
  eglCreatePixmapSurface@Base 7.8.1
  eglCreateScreenSurfaceMESA@Base 7.8.1
+ eglCreateSyncKHR@Base 7.9
  eglCreateWindowSurface@Base 7.8.1
  eglDestroyContext@Base 7.8.1
  eglDestroyImageKHR@Base 7.8.1
  eglDestroySurface@Base 7.8.1
+ eglDestroySyncKHR@Base 7.9
+ eglExportDRMImageMESA@Base 7.9
  eglGetConfigAttrib@Base 7.8.1
  eglGetConfigs@Base 7.8.1
  eglGetCurrentContext@Base 7.8.1
  eglGetCurrentDisplay@Base 7.8.1
  eglGetCurrentSurface@Base 7.8.1
+ eglGetDRMDisplayMESA@Base 7.9
  eglGetDisplay@Base 7.8.1
  eglGetError@Base 7.8.1
  eglGetModeAttribMESA@Base 7.8.1
+ eglGetSyncAttribKHR@Base 7.9
  eglGetModesMESA@Base 7.8.1
  eglGetProcAddress@Base 7.8.1
  eglGetScreensMESA@Base 7.8.1
@@ -70,8 +51,10 @@ libEGL.so.1 libegl1-mesa #MINVER# | libegl1-x11
  eglReleaseThread@Base 7.8.1
  eglScreenPositionMESA@Base 7.8.1
  eglShowScreenSurfaceMESA@Base 7.8.1
+ eglSignalSyncKHR@Base 7.9
  eglSurfaceAttrib@Base 7.8.1
  eglSwapBuffers@Base 7.8.1
+ eglSwapBuffersRegionNOK@Base 7.9
  eglSwapInterval@Base 7.8.1
  eglTerminate@Base 7.8.1
  eglWaitClient@Base 7.8.1
