@@ -1,1 +1,1 @@
-build/dri/lib/gallium/nouveau_dri.so usr/lib/dri
+build/dri/lib/gallium/*_dri.so usr/lib/dri
