@@ -1,3 +1,3 @@
 dri/usr/lib/libGLESv1_CM.so usr/lib
 dri/usr/include/GLES usr/include
-debian/glesv1_cm.pc usr/lib/pkgconfig
+dri/usr/lib/pkgconfig/glesv1_cm.pc usr/lib/pkgconfig
