@@ -1,1 +1,2 @@
 dri/usr/lib/libGLESv1_CM.so.1* usr/lib
+dri/usr/lib/egl/st_GLESv1_CM.so usr/lib/egl
