@@ -1,3 +1,3 @@
 dri/usr/lib/libGLESv2.so usr/lib
 dri/usr/include/GLES2 usr/include
-debian/glesv2.pc usr/lib/pkgconfig
+dri/usr/lib/pkgconfig/glesv2.pc usr/lib/pkgconfig
