@@ -1,1 +1,2 @@
 dri/usr/lib/libGLESv2.so.2* usr/lib
+dri/usr/lib/egl/st_GLESv2.so usr/lib/egl
