@@ -1,3 +1,3 @@
 dri/usr/lib/libOpenVG.so usr/lib
 dri/usr/include/VG usr/include
-debian/vg.pc usr/lib/pkgconfig
+dri/usr/lib/pkgconfig/vg.pc usr/lib/pkgconfig
