@@ -67,7 +67,7 @@ else
 
   ifeq ($(DEB_HOST_ARCH_OS), linux)
 # Gallium drivers require libdrm-{nouveau,radeon}, only available on Linux
-	GALLIUM_DRIVERS += nouveau radeon
+	GALLIUM_DRIVERS += nouveau radeon r600
 # Although the KMS egl drivers will probably build on kfreebsd & hurd
 # only linux actually has KMS drivers implemented at this point.
 	EGL_DISPLAYS += drm
@@ -75,15 +75,15 @@ else
 
   ifeq ($(DEB_HOST_ARCH), lpia)
 	DRI_DRIVERS += i915 i965
-	GALLIUM_DRIVERS += intel
+	GALLIUM_DRIVERS += i915
   else ifneq ($(DEB_HOST_ARCH), s390)
-	DRI_DRIVERS += mach64 mga r128 r200 r300 r600 radeon savage tdfx
+	DRI_DRIVERS += mach64 mga r128 r200 r600 radeon savage tdfx
     ifeq ($(DEB_HOST_ARCH_CPU), i386)
 	DRI_DRIVERS += i810 i915 i965 sis unichrome
-	GALLIUM_DRIVERS += intel
+	GALLIUM_DRIVERS += i915
     else ifeq ($(DEB_HOST_ARCH_CPU), amd64)
 	DRI_DRIVERS += i915 i965 sis unichrome
-	GALLIUM_DRIVERS += intel
+	GALLIUM_DRIVERS += i915
     endif
   endif
 endif
@@ -95,7 +95,10 @@ confflags-dri = \
 	--with-egl-platforms="$(EGL_DISPLAYS)" \
 	--enable-glx-tls \
 	$(addprefix --enable-gallium-,$(GALLIUM_DRIVERS)) \
-	--with-state-trackers=egl,es,glx,dri,vega \
+	--with-state-trackers=egl,glx,dri,vega \
+	--enable-gles-overlay \
+	--enable-gles1 \
+	--enable-gles2 \
 	$(DIRECT_RENDERING) \
 	$(confflags-common)
 
@@ -191,21 +194,11 @@ $(QUILT_STAMPFN): $(STAMP_DIR)/stamp
 build: build-stamp
 
 build-stamp: $(BUILD_STAMPS)
-ifeq ($(findstring radeon, $(GALLIUM_DRIVERS)), radeon)
-	# Radeon searches for r{200,300,600}_dri only, but the gallium driver
-	# is (at the moment) radeong_dri.  Rename it to r300_dri, as it
-	# fails to support r600.
-	# We don't actually install radeong yet, although it will probably
-	# replace r300 classic soon.
-	mv build/dri/lib/gallium/radeong_dri.so \
-		build/dri/lib/gallium/r300_dri.so
-endif
-ifeq ($(findstring intel, $(GALLIUM_DRIVERS)), intel)
-	# Intel i965 Gallium appears to do nothing more than generate GPU 
-	# lockups.  Kill it with fire.  i915 is apparently useful.
-	rm build/dri/lib/gallium/i965_dri.so
-	rm build/dri/lib/egl_*_i965.so
-endif
+# Remove gallium drivers which replace existing classic drivers.
+# Intel gallium is significantly behind the classic mesa drivers...
+	rm -f build/dri/lib/gallium/i915_dri.so
+# r600g is not yet in a fit state to ship
+	rm -f build/dri/lib/gallium/r600_dri.so
 	>$@
 
 $(STAMP)-build-%: configure
@@ -274,18 +267,12 @@ binary-arch: install
 	dh_strip -plibgl1-mesa-swx11 --dbg-package=libgl1-mesa-swx11-dbg
 	dh_strip -plibgl1-mesa-glx --dbg-package=libgl1-mesa-glx-dbg
 	dh_strip -plibgl1-mesa-dri --dbg-package=libgl1-mesa-dri-dbg
-# Mesa 7.8 doesn't build a gallium swrast DRI driver
-# This is built in git, and will be built in 7.9
-ifneq ($(filter-out swrast, $(GALLIUM_DRIVERS)), )
 	dh_strip -plibgl1-mesa-dri-experimental --dbg-package=libgl1-mesa-dri-experimental-dbg
-endif
 	dh_strip -plibopenvg1-mesa --dbg-package=libopenvg1-mesa-dbg
 	dh_strip -plibegl1-mesa --dbg-package=libegl1-mesa-dbg
 	dh_strip -plibgles1-mesa --dbg-package=libgles1-mesa-dbg
 	dh_strip -plibgles2-mesa --dbg-package=libgles2-mesa-dbg	
-	dh_strip -plibegl1-mesa-drivers-x11 --dbg-package=libegl1-mesa-drivers-x11-dbg
-ifeq ($(findstring drm, $(EGL_DISPLAYS)), drm)
-	dh_strip -plibegl1-mesa-drivers-kms --dbg-package=libegl1-mesa-drivers-kms-dbg
+	dh_strip -plibegl1-mesa-drivers --dbg-package=libegl1-mesa-drivers-dbg
 endif
 	dh_strip -s --remaining-packages
 	dh_compress -s
